--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -36,14 +36,14 @@
    "outputs": [],
    "source": [
     "# Authorization for Google Cloud Platform\n",
-    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"]=\"dataengineering-course-a9365e622cc2.json\"\n",
+    "os.environ[\"GOOGLE_APPLICATION_CREDENTIALS\"]=\"YOUR_SECRET"\n",
     "\n",
     "credentials, your_project_id = google.auth.default(\n",
     "    scopes=[\"https://www.googleapis.com/auth/cloud-platform\"]\n",
     ")\n",
     "\n",
     "# Creating the right clients to access BigQuery\n",
-    "bqclient = bigquery.Client(credentials=credentials, project='dataengineering-course',)\n",
+    "bqclient = bigquery.Client(credentials=credentials, project='YOUR_PROJECT,)\n",
     "bqstorageclient = bigquery_storage.BigQueryReadClient(credentials=credentials)"
    ]
   },
@@ -154,7 +154,7 @@
    ],
    "source": [
     "# Creating a pandas dataframe based on an SQL query in BigQuery\n",
-    "query_string = \"SELECT * FROM `dataengineering-course.US_election_data.tweet_info`\"\n",
+    "query_string = \"YOUR_SQL_QUERY\"\n",
     "\n",
     "dataframe = (\n",
     "    bqclient.query(query_string)\n",
